--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h4 class="f-name-1">Frontend Developer</h4>
             <nav>
                 <ul>
-                    <li id="home"> <a href="/">Home</a></li>
+                    <li id="home"> <a href="index.html">Home</a></li>
                     <li> <a href="about.html">About</a></li>
                     <li> <a href="skills.html">Skills</a></li>
                     <li> <a href="work.html">Works</a></li>
