--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="popup" id="popup">
-            <img src="images\popup.png" alt="Pop Img">
+            <img src="images\Home-img\popup.png" alt="Pop Img">
             <h2>Thank You!</h2>
             <p>CV has been successfully downloaded. Thanks!</p>
             <button type="submit" class="btn-1" onclick="closepopup()">OK</button>
