--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,9 @@
               <input type="email" class="form-control" id="clientemail" placeholder="Enter Email address">
               <div id="emailHelp" class="e-help">We'll never share your email and phone with anyone else.</div>
             </div>
-            <!-- <div class="mb-3"> 
-              <label for="clientphone" class="form-label">Phone</label>
+            <div class="mb-3">
               <input type="phone" class="form-control" id="clientphone" placeholder="Enter Phone Number">
-             </div> -->
+             </div>
             <div class="mb-3">
               <!-- <label for="clientemail" class="form-label">Enquiry</label> -->
               <textarea cols="30" rows="30" spellcheck="false" type="text" class="form-control enquiry" id="clientemail" placeholder="Message"></textarea>
@@ -57,7 +56,6 @@
               <input type="checkbox" class="form-check-input" id="isclient">
               <label class="e-help" for="isclient">I want you to work on a project with me </label>
             </div>
-
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
