--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
                             <h3>My-Todo-List</h3>
                             <p>The To-Do List Application is a web-based productivity tool that allows users to create and manage tasks, set due dates and reminders, and track their progress.I have used Technologies and Tools like HTML, CSS, Javascript and Bootstrap in it.
                             </p>
-                            <a href="todo list\my-todo-list.html"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
+                            <a href=" https://choudharysuhel.github.io/Todo-List/"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="project-box">
