--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="https://www.linkedin.com/in/suhel-choudhary"><img src="images/Home-img\linkedin.png" alt="Linkedin"></a> 
                     </div>
                     <div class="buttons">
-                        <a href="SUHEL-CV.pdf" target="_blank">
+                        <a href="https://github.com/choudharysuhel/Suhel-Portfolio/blob/master/SUHEL-CV%20(1).pdf" target="_blank">
                         <button class="btn" onclick="openpopup()">Download CV</button></a>
                         <!-- <a href="/contact.html">
                         <button class="btn">Contact Me</button></a> -->
