--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="moreabout"> I'm a frontend developer with a passion for creating beautiful, functional websites.On this site, you'll find examples of my work, as well as information about my skills and experience. I specialize in creating user-friendly interfaces using the latest frontend technologies and frameworks.</div>
                     <div class="social">
                         <!-- <a href=""><img id="insta" src="images\Home-img\insta.png" alt="Instagram"></a> -->
-                        <a href="https://www.github.com/suhel_choudhary"><img src="images\Home-img\git.png" alt="Git"></a>
+                        <a href="https://www.github.com/suhelchoudhary"><img src="images\Home-img\git.png" alt="Git"></a>
                         <a href="https://www.linkedin.com/in/suhel-choudhary"><img src="images/Home-img\linkedin.png" alt="Linkedin"></a> 
                     </div>
                     <div class="buttons">
