--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
                             <h3>Tic-Tac-Toe Game</h3>
                             <p>The tic-tac-toe game project is a simple yet challenging game that was implemented using HTML, CSS, and JavaScript. The game allows users to play against each other or against the computer, with the aim of getting three X's or O's in a row.
                             </p>
-                            <a href="#"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
+                            <a href="Tic-tac-toe-Game.html"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="project-box">
