--- a/Tic-tac-toe-Game.html
+++ b/Tic-tac-toe-Game.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe-Game</title>
-    <link rel="stylesheet" href="tic.css" .css">
+    <link rel="stylesheet" href="tic.css">
 </head>
 
 <body>
@@ -15,6 +15,9 @@
             <h1 class="text">Welcome to my Tic-Tac-Toe Game</h1>
         </div>
         <div class="con-container">
+            <div class="col">
+                <p>For my latest project, I started working on a Tic-Tac-Toe game using HTML, CSS, and JavaScript. The goal of the project is to create a fun and interactive game that users can play on their browser.</p>
+            </div>
             <div class="col">
                 <h3 col-1>Accomplishments</h3>
                 <p>So far, I have designed the user interface for the game, created the game board using HTML, and
