--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
                         <div class="box" id="box-3">
                             <h3>Weather App</h3>
                             <p>The weather app project is a web application that allows users to view the weather conditions and forecast for any location in the world.The app allows users to search for a location, view its current weather conditions, and get a forecast for the next few days.</p>
-                            <a href="#"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
+                            <a href="weatherApp.html"><img src="images\my-project-img\box-arrow-up-right.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
