--- a/index.html
+++ b/index.html
@@ -34,35 +34,57 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="images\Home-img\hamburger.svg" alt="Hamburger">
-                <img class="arrow" src="images\Home-img\x-lg.svg" alt="Arrow" >
+                <img class="ham" src="images\Home-img\hamburger.png" alt="Hamburger">
+                <img class="arrow" src="images\Home-img\x-lg.svg" alt="Arrow">
             </div>
             <div class="infoContainer">
                 <div class="devInfo">
                     <!-- <div class="hello f-weight">Hi,</div> -->
-                    <div class="hello f-weight">Hello, It's Me</div>
-                    <div class="name">Suhel Choudhary</div>
-                    <div class="about f-weight">And I'am a <span class="multiple-text">Frontend Developer</span></div>
-                    <div class="moreabout"> I'm a frontend developer with a passion for creating beautiful, functional websites.On this site, you'll find examples of my work, as well as information about my skills and experience. I specialize in creating user-friendly interfaces using the latest frontend technologies and frameworks.</div>
-                    <div class="social">
-                        <!-- <a href=""><img id="insta" src="images\Home-img\insta.png" alt="Instagram"></a> -->
-                        <a href="https://www.github.com/suhelchoudhary"><img src="images\Home-img\git.png" alt="Git"></a>
-                        <a href="https://www.linkedin.com/in/suhel-choudhary"><img src="images/Home-img\linkedin.png" alt="Linkedin"></a> 
+                    <div class="intro">
+                        <div class="name">Suhel Choudhary</div>
+                        <div class="about">Frontend Developer</div>
                     </div>
-                    <div class="buttons">
-                        <a href="SUHEL-CV (2).pdf" target="_blank">
-                        <button class="btn" onclick="openpopup()">Download CV</button></a>
-                        <!-- <a href="/contact.html">
-                        <button class="btn">Contact Me</button></a> -->
+                    <div class="moreabout-1">
+                        <img src="images\Home-img\stationary.png" alt="About img">
+                        <h4>About Me</h4>
+                        <div class="inner-about"> "Hi, I am Suhel, a FrontEnd Developer with a passion for creating
+                            beautiful & functional websites. "On this site, you'll find examples of my work, as wellas
+                            information about my skills and experience."
+                        </div>
                     </div>
                 </div>
-                <!-- <div class="devPic"><img src="images\dev1.png" alt="Suhel Image"></div> -->
-                 <div class="devPic"><img src="images\Home-img\back-img.png" alt="Suhel Image"></div>
+                <!-- <div class="devPic"><img src="images\Home-img\back-img.png" alt="Suhel Image"></div> -->
+                <div class="devPic"><img src="images\Home-img\with-back.png.jpg" alt="Suhel Image"></div>
+                <div class="frontend-img">
+                    <img src="images\Home-img\frontend.png" alt="Frontend-img">
+                </div>
+                <div class="moreabout-2">
+                    <div class="moreabout-content">
+                        <h4>More About</h4>
+                        <div class="detail">I specialize in creating user-friendly interfaces using the latest frontend
+                            technologies and frameworks. In my work, I prioritize user experience and accessibility.
+                            <!-- <span>Thank you.... for visiting my site, and I look forward to hearing from you
+                                soon!</span> -->
+                        </div>
+                    </div>
+                    <div class="social">
+                        <a class="a-1" href="https://www.github.com/suhel_choudhary.git"><img
+                                src="images\Home-img\git.png" alt="Git"></a>
+                        <a class="a-2" href="https://www.linkedin.com/in/suhel-choudhary"><img
+                                src="images/Home-img\linkedin.png" alt="Linkedin"></a>
+                    </div>
+                    <div class="btn-box">
+                        <div class="btn">
+                            Download CV
+                        </div>
+                        <a href="images\SUHEL_CV (2) (1).docx" onclick="openpopup()" target="_blank"><img
+                                src="images\Home-img\download.png" alt="Download"></a>
+                    </div>
+                </div>
             </div>
-    
         </div>
     </div>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
-     
+
 </html>
