--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="social">
-                        <a class="a-1" href="https://www.github.com/suhel_choudhary.git"><img
+                        <a class="a-1" href="https://github.com/choudharysuhel"><img
                                 src="images\Home-img\git.png" alt="Git"></a>
                         <a class="a-2" href="https://www.linkedin.com/in/suhel-choudhary"><img
                                 src="images/Home-img\linkedin.png" alt="Linkedin"></a>
@@ -77,7 +77,7 @@
                         <div class="btn">
                             Download CV
                         </div>
-                        <a href="SUHEL-CV (2)(1).pdf" onclick="openpopup()" target="_blank"><img
+                        <a href="SUHEL-CV(2)(1).pdf" onclick="openpopup()" target="_blank"><img
                                 src="images\Home-img\download.png" alt="Download"></a>
                     </div>
                 </div>
