--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     </div>
     <div class="main">
         <div class="hamburger">
-          <img class="ham" src="images\Home-img\hamburger.svg" alt="Hamburger">
+          <img class="ham" src="images\Home-img\hamburger.png" alt="Hamburger">
                 <img class="arrow" src="images\Home-img\x-lg.svg" alt="Arrow">
         </div>
 
@@ -49,7 +49,6 @@
             <div class="mb-3">
               <!-- <label for="clientemail" class="form-label">Email address</label> -->
               <input type="email" class="form-control" id="clientemail" placeholder="Enter Email address">
-              <div id="emailHelp" class="e-help">We'll never share your email and phone with anyone else.</div>
             </div>
             <div class="mb-3">
               <input type="phone" class="form-control" id="clientphone" placeholder="Enter Phone Number">
@@ -57,10 +56,6 @@
             <div class="mb-3">
               <!-- <label for="clientemail" class="form-label">Enquiry</label> -->
               <textarea cols="30" rows="30" spellcheck="false" type="text" class="form-control enquiry" id="clientemail" placeholder="Message"></textarea>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="isclient">
-              <label class="e-help" for="isclient">I want you to work on a project with me </label>
             </div>
             <button type="submit" class="btn btn-primary" onclick="openpopup()">Submit</button>
           </form>
