--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
         </div>
         <div class="main">
             <div class="hamburger">
-                <img class="ham" src="images\Home-img\hamburger.svg" alt="Hamburger">
+                <img class="ham" src="images\Home-img\hamburger.png" alt="Hamburger">
                 <img class="arrow" src="images\Home-img\x-lg.svg" alt="Arrow">
             </div>
 
