--- a/about.html
+++ b/about.html
@@ -68,14 +68,14 @@
                             <div class="year">2014</div>
                             <div grad-info>
                                 <h4 class="info-col-2">Higher Secondary</h4>
-                                <span class="info-col-3">UP Board Allahabad</span>
+                                <div class="info-col-3">UP Board Allahabad</div>
                             </div>
                         </div>
                         <div class="gd2">
                             <div class="year">2012</div>
                             <div grad-info>
                                 <h4 class="info-col-2">High School</h4>
-                                <span class="info-col-3">UP Board Allahabad</span>
+                                <div class="info-col-3">UP Board Allahabad</div>
                             </div>
                         </div>
                     </div>
