--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
                     <li id="home"> <a href="index.html">Home</a></li>
                     <li> <a href="about.html">About</a></li>
                     <li> <a href="skills.html">Skills</a></li>
-                    <li> <a href="work.html">Works</a></li>
+                    <li> <a href="work.html">My Projects</a></li>
                     <li> <a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
