--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <!-- <div class="devPic"><img src="images\Home-img\back-img.png" alt="Suhel Image"></div> -->
-                <div class="devPic"><img src="images\Home-img\with-back.png.jpg" alt="Suhel Image"></div>
+                <div class="devPic"><img src="images\Home-img\main-pic-1.png.jpg" alt="Suhel Image"></div>
                 <div class="frontend-img">
                     <img src="images\Home-img\frontend.png" alt="Frontend-img">
                 </div>
